--- a/Main.css
+++ b/Main.css
@@ -8,7 +8,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: url(images/background.jpg);
+    background: url(Images/Roblox\ Background.png);
     background-position: center;
     background-size: cover;
     display: flex;
